		* Prevent flicker when sorting already sorted lists
		* Prevent creation of more than 99 categories, since that's the limit
		* Fixed saving of sort orders
		* Allow switching through files in file detail dialog
		* Improve performance when many small files are hashed
		* Fix: if a file had more than two copies shared it was hashed on every startup

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools
		* Fix for autoconf-2.64.
		* Raised minimum wxWidgets version to 2.8.8
		* Make amulecmd help command work without connection
		* New translation concept for manpages
		* KDE Plasma applet to show stats
		* Fix warnings with latest autoconf (2.67)

	woutermense:
		* Fix 'break/continue [n]' PHP implementation
		* Allow multiple download links in webserver

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k
		* Backup config file on shutdown

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.
		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups
		* mirko.g for being so committed to compile aMule on Snow Leopard.

--------------------------------------------------------------------------------

Version 2.2.6 - The "we don't have holidays" version.
----------
2009-09-16

	GonoszTopi:
		* Fixed obfuscated server UDP communication.
		* Fixed cross-endian Kad node verification.
		* Fixed name conflict in builtin PHP parser.
		* Fixed configure finding unwanted Crypto++ installations.

	Marcell:
		* Properly update transfers tab's bottom pane's title.
