@@ -242,6 +242,7 @@ Version 2.3.0 - The river knows.
 		* Allow switching through files in file detail dialog
 		* Improve performance when many small files are hashed
 		* Fix: if a file had more than two copies shared it was hashed on every startup
+		* Show directory in search list for "view shared files" searches
 
 	Vollstrecker:
 		* Unify copyright lines
